Remove localizedText from errorResponse, and locale header from API calls