@@ -5,16 +5,14 @@ import com.github.saphyra.apphub.api.feature.skyxplore.data.client.SkyXploreSave
 import com.github.saphyra.apphub.api.feature.skyxplore.response.friendship.FriendshipResponse;
 import com.github.saphyra.apphub.api.feature.skyxplore.response.game.GameViewForLobbyCreation;
 import com.github.saphyra.apphub.lib.common_domain.AccessToken;
-import com.github.saphyra.apphub.lib.security.access_token.AccessTokenProvider;
-import com.github.saphyra.apphub.lib.web_utils.LocaleProvider;
 import com.github.saphyra.apphub.lib.common_util.converter.AccessTokenHeaderConverter;
+import com.github.saphyra.apphub.lib.security.access_token.AccessTokenProvider;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -24,7 +22,6 @@ import static org.mockito.BDDMockito.given;
 @ExtendWith(MockitoExtension.class)
 public class SkyXploreDataProxyTest {
     private static final String ACCESS_TOKEN_HEADER = "access-token-header";
-    private static final String LOCALE = "locale";
     private static final UUID GAME_ID = UUID.randomUUID();
 
     @Mock
@@ -32,9 +29,6 @@ public class SkyXploreDataProxyTest {
 
     @Mock
     private AccessTokenHeaderConverter accessTokenHeaderConverter;
-
-    @Mock
-    private LocaleProvider localeProvider;
 
     @Mock
     private AccessTokenProvider accessTokenProvider;
@@ -57,8 +51,7 @@ public class SkyXploreDataProxyTest {
     @Test
     public void getFriends() {
         given(accessTokenHeaderConverter.convertDomain(accessToken)).willReturn(ACCESS_TOKEN_HEADER);
-        given(localeProvider.getOrDefault()).willReturn(LOCALE);
-        given(dataFriendClient.getFriends(ACCESS_TOKEN_HEADER, LOCALE)).willReturn(Arrays.asList(friendshipResponse));
+        given(dataFriendClient.getFriends(ACCESS_TOKEN_HEADER)).willReturn(List.of(friendshipResponse));
 
         List<FriendshipResponse> result = underTest.getFriends(accessToken);
 
@@ -68,8 +61,7 @@ public class SkyXploreDataProxyTest {
     @Test
     public void getGameForLobbyCreation() {
         given(accessTokenProvider.getAsString()).willReturn(ACCESS_TOKEN_HEADER);
-        given(localeProvider.getOrDefault()).willReturn(LOCALE);
-        given(savedGameClient.getGameForLobbyCreation(GAME_ID, ACCESS_TOKEN_HEADER, LOCALE)).willReturn(gameViewForLobbyCreation);
+        given(savedGameClient.getGameForLobbyCreation(GAME_ID, ACCESS_TOKEN_HEADER)).willReturn(gameViewForLobbyCreation);
 
         GameViewForLobbyCreation result = underTest.getGameForLobbyCreation(GAME_ID);
 
